# chiaki-web

./: .gitignore  CMakeLists.txt
gui/: CMakeLists.txt  discoverymanager.h  host.h  mainwindow.h
lib/: CMakeLists.txt  lib.cpp  lib.h
